// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Skills golden > Fehlerpfade: Bogen fehlt, Pfeile fehlen, Stab-Bonus, Zweihand-Nahkampf 1`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Dafür brauchst du einen Bogen.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.7727432732935995,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Fehlerpfade: Bogen fehlt, Pfeile fehlen, Stab-Bonus, Zweihand-Nahkampf 2`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Dafür brauchst du Pfeile in der Nebenhand.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.7727432732935995,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Fehlerpfade: Bogen fehlt, Pfeile fehlen, Stab-Bonus, Zweihand-Nahkampf 3`] = `
{
  "auto": false,
  "cd": {
    "ember_bolt": 30,
  },
  "ev": [
    {
      "amount": 137,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "ember_bolt",
      "targetId": 3,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4990,
  "next": 0.21976301027461886,
  "target": 3,
  "victims": [
    {
      "burn": {
        "perSec": 14,
        "srcId": 1,
      },
      "dot": null,
      "hp": 106,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Fehlerpfade: Bogen fehlt, Pfeile fehlen, Stab-Bonus, Zweihand-Nahkampf 4`] = `
{
  "auto": false,
  "cd": {
    "ember_bolt": 30,
  },
  "ev": [
    {
      "amount": 137,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "ember_bolt",
      "targetId": 3,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4990,
  "next": 0.21976301027461886,
  "target": 3,
  "victims": [
    {
      "burn": {
        "perSec": 14,
        "srcId": 1,
      },
      "dot": null,
      "hp": 106,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Fehlerpfade: Bogen fehlt, Pfeile fehlen, Stab-Bonus, Zweihand-Nahkampf 5`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Ziel außer Reichweite.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.7727432732935995,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 1`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Ziel außer Reichweite.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.5274470399599522,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 2`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Ziel außer Reichweite.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.28529605525545776,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 3`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Ziel außer Reichweite.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.4561921926215291,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 4`] = `
{
  "auto": true,
  "cd": {
    "whirlwind": 100,
  },
  "ev": [
    {
      "attackerId": 1,
      "targetId": 4,
      "type": "miss",
    },
  ],
  "hp": 5000,
  "mana": 4984,
  "next": 0.9683778982143849,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 5`] = `
{
  "auto": true,
  "cd": {
    "whirlwind": 100,
  },
  "ev": [
    {
      "amount": 150,
      "attackerId": 1,
      "crit": false,
      "skill": "whirlwind",
      "targetId": 4,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4984,
  "next": 0.6308333419729024,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 93,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 6`] = `
{
  "auto": true,
  "cd": {
    "whirlwind": 100,
  },
  "ev": [
    {
      "amount": 151,
      "attackerId": 1,
      "crit": false,
      "skill": "whirlwind",
      "targetId": 4,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4984,
  "next": 0.481180417817086,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 92,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 7`] = `
{
  "auto": false,
  "cd": {
    "frost_nova": 140,
  },
  "ev": [
    {
      "amount": 159,
      "attackerId": 1,
      "crit": false,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 4,
      "type": "hit",
    },
    {
      "amount": 352,
      "attackerId": 1,
      "crit": true,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 6,
      "type": "hit",
    },
    {
      "id": 6,
      "type": "died",
    },
    {
      "amount": 174,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 24,
      "to": 1,
      "type": "gold",
    },
  ],
  "hp": 5000,
  "mana": 4982,
  "next": 0.13893358339555562,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 84,
      "status": {
        "slow": 80,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 8`] = `
{
  "auto": false,
  "cd": {
    "frost_nova": 140,
  },
  "ev": [
    {
      "amount": 151,
      "attackerId": 1,
      "crit": false,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 4,
      "type": "hit",
    },
    {
      "amount": 172,
      "attackerId": 1,
      "crit": false,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 6,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4982,
  "next": 0.4992015736643225,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 92,
      "status": {
        "slow": 80,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 41,
      "status": {
        "slow": 80,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 9`] = `
{
  "auto": false,
  "cd": {
    "frost_nova": 140,
  },
  "ev": [
    {
      "amount": 318,
      "attackerId": 1,
      "crit": true,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 4,
      "type": "hit",
    },
    {
      "id": 4,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 24,
      "to": 1,
      "type": "gold",
    },
    {
      "amount": 294,
      "attackerId": 1,
      "crit": true,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 6,
      "type": "hit",
    },
    {
      "id": 6,
      "type": "died",
    },
    {
      "amount": 174,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 26,
      "to": 1,
      "type": "gold",
    },
  ],
  "hp": 5000,
  "mana": 4982,
  "next": 0.28674706909805536,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 10`] = `
{
  "auto": false,
  "cd": {
    "fireball": 90,
  },
  "ev": [
    {
      "amount": 229,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 4,
      "type": "hit",
    },
    {
      "amount": 722,
      "attackerId": 1,
      "crit": true,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 5,
      "type": "hit",
    },
    {
      "id": 5,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 22,
      "to": 1,
      "type": "gold",
    },
    {
      "amount": 209,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 7,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4976,
  "next": 0.24752389639616013,
  "target": 4,
  "victims": [
    {
      "burn": {
        "perSec": 23,
        "srcId": 1,
      },
      "dot": null,
      "hp": 14,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": {
        "perSec": 21,
        "srcId": 1,
      },
      "dot": null,
      "hp": 733,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 11`] = `
{
  "auto": false,
  "cd": {
    "fireball": 90,
  },
  "ev": [
    {
      "amount": 217,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 4,
      "type": "hit",
    },
    {
      "amount": 356,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 5,
      "type": "hit",
    },
    {
      "id": 5,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 20,
      "to": 1,
      "type": "gold",
    },
    {
      "amount": 225,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 7,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4976,
  "next": 0.5813204094301909,
  "target": 4,
  "victims": [
    {
      "burn": {
        "perSec": 22,
        "srcId": 1,
      },
      "dot": null,
      "hp": 26,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": {
        "perSec": 23,
        "srcId": 1,
      },
      "dot": null,
      "hp": 717,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 12`] = `
{
  "auto": false,
  "cd": {
    "fireball": 90,
  },
  "ev": [
    {
      "amount": 450,
      "attackerId": 1,
      "crit": true,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 4,
      "type": "hit",
    },
    {
      "id": 4,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 24,
      "to": 1,
      "type": "gold",
    },
    {
      "amount": 585,
      "attackerId": 1,
      "crit": true,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 5,
      "type": "hit",
    },
    {
      "id": 5,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 23,
      "to": 1,
      "type": "gold",
    },
    {
      "amount": 217,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 7,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4976,
  "next": 0.5264285774901509,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": {
        "perSec": 22,
        "srcId": 1,
      },
      "dot": null,
      "hp": 725,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 13`] = `
{
  "auto": false,
  "cd": {
    "multishot": 70,
  },
  "ev": [
    {
      "attackerId": 1,
      "targetId": 5,
      "type": "miss",
    },
    {
      "amount": 131,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 7,
      "type": "hit",
    },
    {
      "attackerId": 1,
      "targetId": 6,
      "type": "miss",
    },
  ],
  "hp": 5000,
  "mana": 4986,
  "next": 0.45527112716808915,
  "target": 5,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 82,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 14`] = `
{
  "auto": false,
  "cd": {
    "multishot": 70,
  },
  "ev": [
    {
      "amount": 139,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 5,
      "type": "hit",
    },
    {
      "amount": 139,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 7,
      "type": "hit",
    },
    {
      "amount": 254,
      "attackerId": 1,
      "crit": true,
      "skill": "multishot",
      "targetId": 6,
      "type": "hit",
    },
    {
      "id": 6,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 19,
      "to": 1,
      "type": "gold",
    },
  ],
  "hp": 5000,
  "mana": 4986,
  "next": 0.971613448113203,
  "target": 5,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 104,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 74,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 15`] = `
{
  "auto": false,
  "cd": {
    "multishot": 70,
  },
  "ev": [
    {
      "amount": 127,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 5,
      "type": "hit",
    },
    {
      "amount": 278,
      "attackerId": 1,
      "crit": true,
      "skill": "multishot",
      "targetId": 7,
      "type": "hit",
    },
    {
      "id": 7,
      "type": "died",
    },
    {
      "amount": 174,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 23,
      "to": 1,
      "type": "gold",
    },
    {
      "type": "loot",
    },
    {
      "amount": 143,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 6,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4986,
  "next": 0.5399471158161759,
  "target": 5,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 116,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 32,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 16`] = `
{
  "auto": false,
  "cd": {
    "poison_shot": 60,
  },
  "ev": [
    {
      "attackerId": 1,
      "targetId": 5,
      "type": "miss",
    },
  ],
  "hp": 5000,
  "mana": 4991,
  "next": 0.281103502959013,
  "target": 5,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 17`] = `
{
  "auto": false,
  "cd": {
    "poison_shot": 60,
  },
  "ev": [
    {
      "amount": 119,
      "attackerId": 1,
      "crit": false,
      "dt": "poison",
      "skill": "poison_shot",
      "targetId": 5,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4991,
  "next": 0.4992015736643225,
  "target": 5,
  "victims": [
    {
      "burn": null,
      "dot": {
        "perSec": 24,
        "srcId": 1,
        "until": 160,
      },
      "hp": 124,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 18`] = `
{
  "auto": false,
  "cd": {
    "poison_shot": 60,
  },
  "ev": [
    {
      "amount": 112,
      "attackerId": 1,
      "crit": false,
      "dt": "poison",
      "skill": "poison_shot",
      "targetId": 5,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4991,
  "next": 0.48672957462258637,
  "target": 5,
  "victims": [
    {
      "burn": null,
      "dot": {
        "perSec": 22,
        "srcId": 1,
        "until": 160,
      },
      "hp": 131,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 19`] = `
{
  "auto": false,
  "cd": {
    "lightning": 120,
  },
  "ev": [
    {
      "amount": 397,
      "attackerId": 1,
      "crit": false,
      "skill": "lightning",
      "targetId": 4,
      "type": "hit",
    },
    {
      "id": 4,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 27,
      "to": 1,
      "type": "gold",
    },
  ],
  "hp": 5000,
  "mana": 4970,
  "next": 0.45527112716808915,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 20`] = `
{
  "auto": false,
  "cd": {
    "lightning": 120,
  },
  "ev": [
    {
      "amount": 364,
      "attackerId": 1,
      "crit": false,
      "skill": "lightning",
      "targetId": 4,
      "type": "hit",
    },
    {
      "id": 4,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 26,
      "to": 1,
      "type": "gold",
    },
  ],
  "hp": 5000,
  "mana": 4970,
  "next": 0.7858669895213097,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 21`] = `
{
  "auto": false,
  "cd": {
    "lightning": 120,
  },
  "ev": [
    {
      "amount": 778,
      "attackerId": 1,
      "crit": true,
      "skill": "lightning",
      "targetId": 4,
      "type": "hit",
    },
    {
      "id": 4,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 24,
      "to": 1,
      "type": "gold",
    },
  ],
  "hp": 5000,
  "mana": 4970,
  "next": 0.19491625181399286,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 22`] = `
{
  "auto": true,
  "cd": {
    "healing_hand": 200,
  },
  "ev": [
    {
      "amount": 390,
      "to": 1,
      "type": "healed",
    },
  ],
  "hp": 490,
  "mana": 4986,
  "next": 0.5274470399599522,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 23`] = `
{
  "auto": true,
  "cd": {
    "healing_hand": 200,
  },
  "ev": [
    {
      "amount": 390,
      "to": 1,
      "type": "healed",
    },
  ],
  "hp": 490,
  "mana": 4986,
  "next": 0.28529605525545776,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > Rang 4, Krit, mehrere Seeds 24`] = `
{
  "auto": true,
  "cd": {
    "healing_hand": 200,
  },
  "ev": [
    {
      "amount": 390,
      "to": 1,
      "type": "healed",
    },
  ],
  "hp": 490,
  "mana": 4986,
  "next": 0.4561921926215291,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > ember_bolt Rang 1 1`] = `
{
  "auto": false,
  "cd": {
    "ember_bolt": 30,
  },
  "ev": [
    {
      "amount": 145,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "ember_bolt",
      "targetId": 3,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4990,
  "next": 0.21976301027461886,
  "target": 3,
  "victims": [
    {
      "burn": {
        "perSec": 15,
        "srcId": 1,
      },
      "dot": null,
      "hp": 98,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > fireball Rang 1 1`] = `
{
  "auto": false,
  "cd": {
    "fireball": 90,
  },
  "ev": [
    {
      "amount": 239,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 3,
      "type": "hit",
    },
    {
      "amount": 290,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 4,
      "type": "hit",
    },
    {
      "id": 4,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 22,
      "to": 1,
      "type": "gold",
    },
    {
      "type": "loot",
    },
    {
      "type": "loot",
    },
    {
      "amount": 247,
      "attackerId": 1,
      "crit": false,
      "dt": "fire",
      "skill": "fireball",
      "targetId": 6,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4976,
  "next": 0.28811587928794324,
  "target": 3,
  "victims": [
    {
      "burn": {
        "perSec": 24,
        "srcId": 1,
      },
      "dot": null,
      "hp": 4,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": {
        "perSec": 25,
        "srcId": 1,
      },
      "dot": null,
      "hp": 695,
      "status": {
        "burn": 60,
      },
      "target": 1,
    },
  ],
}
`;

exports[`Skills golden > frost_nova Rang 1 1`] = `
{
  "auto": false,
  "cd": {
    "frost_nova": 140,
  },
  "ev": [
    {
      "amount": 161,
      "attackerId": 1,
      "crit": false,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 3,
      "type": "hit",
    },
    {
      "amount": 141,
      "attackerId": 1,
      "crit": false,
      "dt": "frost",
      "skill": "frost_nova",
      "targetId": 5,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4982,
  "next": 0.6231788222212344,
  "target": 3,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 82,
      "status": {
        "slow": 80,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 72,
      "status": {
        "slow": 80,
      },
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > healing_hand Rang 1 1`] = `
{
  "auto": true,
  "cd": {
    "healing_hand": 200,
  },
  "ev": [
    {
      "amount": 390,
      "to": 1,
      "type": "healed",
    },
  ],
  "hp": 490,
  "mana": 4986,
  "next": 0.7727432732935995,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > lightning Rang 1 1`] = `
{
  "auto": false,
  "cd": {
    "lightning": 120,
  },
  "ev": [
    {
      "amount": 419,
      "attackerId": 1,
      "crit": false,
      "skill": "lightning",
      "targetId": 3,
      "type": "hit",
    },
    {
      "id": 3,
      "type": "died",
    },
    {
      "amount": 149,
      "to": 1,
      "type": "xp",
    },
    {
      "amount": 16,
      "to": 1,
      "type": "gold",
    },
    {
      "type": "loot",
    },
  ],
  "hp": 5000,
  "mana": 4970,
  "next": 0.7406128125730902,
  "target": 3,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 0,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > multishot Rang 1 1`] = `
{
  "auto": false,
  "cd": {
    "multishot": 70,
  },
  "ev": [
    {
      "amount": 117,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 4,
      "type": "hit",
    },
    {
      "amount": 113,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 6,
      "type": "hit",
    },
    {
      "amount": 133,
      "attackerId": 1,
      "crit": false,
      "skill": "multishot",
      "targetId": 5,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4986,
  "next": 0.9056215002201498,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 126,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 42,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 100,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > poison_shot Rang 1 1`] = `
{
  "auto": false,
  "cd": {
    "poison_shot": 60,
  },
  "ev": [
    {
      "amount": 101,
      "attackerId": 1,
      "crit": false,
      "dt": "poison",
      "skill": "poison_shot",
      "targetId": 4,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4991,
  "next": 0.08513720124028623,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": {
        "perSec": 20,
        "srcId": 1,
        "until": 160,
      },
      "hp": 142,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > power_strike Rang 1 1`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Ziel außer Reichweite.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.7727432732935995,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > quick_shot Rang 1 1`] = `
{
  "auto": false,
  "cd": {
    "quick_shot": 20,
  },
  "ev": [
    {
      "amount": 105,
      "attackerId": 1,
      "crit": false,
      "skill": "quick_shot",
      "targetId": 4,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4996,
  "next": 0.08513720124028623,
  "target": 4,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 138,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > skull_split Rang 1 1`] = `
{
  "auto": true,
  "cd": {},
  "ev": [
    {
      "reason": "Ziel außer Reichweite.",
      "to": 1,
      "type": "fail",
    },
  ],
  "hp": 5000,
  "mana": 5000,
  "next": 0.7727432732935995,
  "target": null,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 243,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;

exports[`Skills golden > whirlwind Rang 1 1`] = `
{
  "auto": true,
  "cd": {
    "whirlwind": 100,
  },
  "ev": [
    {
      "amount": 170,
      "attackerId": 1,
      "crit": false,
      "skill": "whirlwind",
      "targetId": 3,
      "type": "hit",
    },
  ],
  "hp": 5000,
  "mana": 4984,
  "next": 0.6231788222212344,
  "target": 3,
  "victims": [
    {
      "burn": null,
      "dot": null,
      "hp": 73,
      "status": {},
      "target": 1,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 175,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 213,
      "status": {},
      "target": null,
    },
    {
      "burn": null,
      "dot": null,
      "hp": 942,
      "status": {},
      "target": null,
    },
  ],
}
`;
